# GeneralsReinforcementLearning

./: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  GEMINI.md  HUMAN_PLAYER_GUIDE.md  Makefile  README.md  config.dev.yaml  config.yaml  docker-compose.dev.yml  go.mod  go.sum  test_integration.go
python/: README.md  experience_stream_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  rl_training_example.py  setup.py  setup_dev.sh  simple_experience_test.py  simple_game_client.py  test_after_game_start.py  test_client.py  test_debug_board.py  test_decisive_games.py  test_experience_collection.py  test_experience_streaming.py  test_general_pos.py  test_grpc_client.py  test_gym_env.py  test_gym_minimal.py  test_imports.py  test_parallel_env.py  test_simple.py  test_simple_streaming.py  test_single_agent.py  test_stream_agents.py  test_stream_debug.py  test_stream_simple.py  test_streaming.py  test_streaming_agent.py  test_valid_moves.py  test_wait_for_production.py  train_dqn_agent.py  train_dqn_parallel.py  train_dqn_robust.py  train_dqn_simple.py
python/examples/: experience_streaming.py  simple_agent_example.py  simple_client.py  test_experience_collection.py
python/generals_agent/: __init__.py  agent_runner.py  base_agent.py  base_agent_adapter.py  base_agent_new.py  connection.py  errors.py  events.py  experience_consumer.py  game_client.py  game_session.py  game_utils.py  polling.py  random_agent.py  random_agent_new.py  types.py
python/generals_gym/: __init__.py  generals_env.py  replay_buffer.py  vector_env.py
(+199 files in other folders)
